[backend] Add basic support for loans
